--- a/01-HTML-CSS/07-SCSS/chaim/index.html
+++ b/01-HTML-CSS/07-SCSS/chaim/index.html
@@ -6,28 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.scss">
-    <link rel="stylesheet" href="sist/style.css">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
     <div class="card">
-  <img src="137.jpg" alt=""></div>
- <p>jvnvjvnclzkm</p>
-  <div class="card1">
-  <img src="19.jpg" alt=""></div>
-  <p>lfvjkjnl</p>
-   <div class="card2">
-   <img src="24.jpg" alt=""></div>
-   <p>kvcnklc</p>
-     <div class="card3">
-    <img src="31.jpg" alt=""></div>
-    <p>jfdnlksklj</p>
-   <div class="card4">
-   <img src="33.jpg" alt=""></div>
-   <p>dkfgnbklcckmz</p>
-     <div class="card5">
-     <img src="4.jpg" alt=""></div>
-     <p>jgnvklcslk</p>
+  <img src="1.jpg" alt="">
+ <p>jvnvjvnclzkm</p></div>
+  <div class="card">
+  <img src="2.jpg" alt="">
+  <p>lfvjkjnl</p></div>
+   <div class="card">
+   <img src="3.jpg" alt="">
+   <p>kvcnklc</p></div>
+     <div class="card">
+    <img src="4.jpg" alt="">
+    <p>jfdnlksklj</p></div>
+   <div class="card">
+   <img src="5.jpg" alt="">
+   <p>dkfgnbklcckmz</p></div>
+     <div class="card">
+     <img src="6.jpg" alt="">
+     <p>jgnvklcslk</p></div>
+     <div class="card">
+      <img src="5.jpg" alt="">
+      <p>dkfgnbklcckmz</p></div>
+      <div class="card">
+        <img src="5.jpg" alt="">
+        <p>dkfgnbklcckmz</p></div>
+        <div class="card">
+          <img src="5.jpg" alt="">
+          <p>dkfgnbklcckmz</p></div>
                                                                                                 
 
 </body>
