--- a/01-HTML-CSS/07-SCSS/IdoGino/Task6.html
+++ b/01-HTML-CSS/07-SCSS/IdoGino/Task6.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/d13a0d855d.js" crossorigin="anonymous"></script>    
+    <script src="https://kit.fontawesome.com/d13a0d855d.js" crossorigin="anonymous"></script>  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/Task6.css">
-    <title>Document</title>
+    <title>Addicting Games</title>
 </head>
 <body>
     <div class="main">
 
       <div class="main_topHeader">
-          <div class="logo"></div>
+         <a href="Task6.html" class="logo"></a> 
           <div class="search"><input type="text" placeholder="Search for a game " ><i class="fas fa-search"></i></div>
 
           <div class="topOptions">
@@ -152,6 +156,7 @@
     </div>
 
     <div class="main-commercial">
+        <h1>advertisement</h1>
         <div class="firstCommercial"></div>
         </div>
 
@@ -159,7 +164,6 @@
         <h1>NEW GAMES <span> - Every Thursday</span></h1>
         <div class="box btn-viewLastWeek">View Last Weeks Games <i class="fas fa-angle-right"></i></div>
 
-       
         <div class="main_mostAddictingGames-firstLine">
             <div class="animationBox">
                 <video src="https://www.addictinggames.com/sites/default/files/TurkeyAdventure275x157.mp4" loop onmouseover="this.play();" onmouseout="this.pause();"></video>
@@ -235,8 +239,15 @@
             <video src="https://www.addictinggames.com/sites/default/files/missile-madness.mp4" loop onmouseover="this.play();" onmouseout="this.pause();"></video>
             <p>Missile Madness</p>
         </div>
-
     </div>
+
+    <div class="main_freeGames">
+        <h1>That Phone in your pocket has access to more free games!</h1>
+    </div>
+
+
+
+
 
    
     </div>
