--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
@@ -1,28 +1,3 @@
-<!-- ragnarok : 
-quake 3 : 
-fifa: 
-counter strike : 
-the sims : 
-rocket league : 
-tony hawk 2: 
-chess : 
-poker : 
-starcraft : 
-
-
-oni : 
-doom : https://c.tenor.com/3Zfog73r0gYAAAAC/doom-2005.gif
-gta : https://i.gifer.com/YhwH.gif
-maxpayme : https://i.gifer.com/MzK.gif
-last of us 2 : https://i.gifer.com/3wsQ.gif
-postal 2 : https://c.tenor.com/fiarhIxtD74AAAAd/postal-petition.gif
-spiderman : https://i.gifer.com/6ppd.gif
-red dead : https://i.gifer.com/XIN7.gif
-assassins : https://i.gifer.com/WQPj.gif
-portal 2 : https://i.gifer.com/3mfH.gif
-
- -->
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,7 +6,8 @@ portal 2 : https://i.gifer.com/3mfH.gif
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.ico" sizes="any">
+    <link rel="shortcut icon" sizes="16x16" type="image/x-icon" href="https://www.addictinggames.com/sites/all/themes/starkish/images/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="dist/style.css">
     <title>Addictive Games</title>
 
 </head>
@@ -39,11 +15,11 @@ portal 2 : https://i.gifer.com/3mfH.gif
 <body>
 
 
-    <div class="header">
+    <section class="header">
 
         <div class="header__logo">
 
-            <img src="img/Screen Shot 2021-11-30 at 22.52.47.png" alt="">
+            <img src="img/addictinggames.png" alt="">
 
         </div>
 
@@ -53,21 +29,23 @@ portal 2 : https://i.gifer.com/3mfH.gif
 
         </div>
 
-        <div class="headermenu">
+        <div class="header__menu">
 
-            <div class="headermenu__box">
+            <div class="header__menu__box">
 
                 <img src="img/games.png" alt="">
                 <p>Games</p>
 
             </div>
 
-            <div class="headermenu__box"></div>
+            <div class="header__menu__box">
 
                 <img src="img/hot.png" alt="">
                 <p>hot</p>
 
-            <div class="headermenu__box">
+            </div>
+
+            <div class="header__menu__box">
 
                 <img src="img/multiplayer.png">
                 <p>multiplayer</p>
@@ -75,22 +53,29 @@ portal 2 : https://i.gifer.com/3mfH.gif
             </div>
 
 
-            <div class="headermenu__upgrade">
+            <div class="header__menu__box--u">
 
-                <img src="img/Screen Shot 2021-12-01 at 0.08.44.png" alt="">
+                <img src="img/gamepass.png" alt="">
+
             </div>
-            <div class="headermenu__account">
-                <div class="login__register">
+
+            <div class="header__menu__account">
+
+                <div class="register">
                     Register
                 </div>
-                <div class="account__login">
+
+                <div class="login">
                     Login
                 </div>
+
             </div>
 
         </div>
 
-        <div class="menubar">
+    </section>
+
+    <section class="menubar">
 
             <div class="menubar__cards">
 
@@ -169,9 +154,9 @@ portal 2 : https://i.gifer.com/3mfH.gif
             </div>
 
 
-        </div>
+        </section>
 
-        <div class="sportarcade">
+        <section class="sportarcade">
 
             <div class="title">
                 <h1>My Favorite - Arcade & Sport Games</h1>
@@ -247,9 +232,9 @@ portal 2 : https://i.gifer.com/3mfH.gif
 
             </div>
 
-        </div>
+        </section>
 
-        <div class="storyline">
+        <section class="storyline">
 
             <div class="title">
                 <h1>My Favorite - Storyline Games</h1>
@@ -258,19 +243,74 @@ portal 2 : https://i.gifer.com/3mfH.gif
             <div class="gamebox">
 
                 <img src="https://i.gifer.com/DiOL.gif" alt="">
+                <p>Oni</p>
                 
             </div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
+            <div class="gamebox">
 
-        </div>
+                <img src="https://c.tenor.com/3Zfog73r0gYAAAAC/doom-2005.gif" alt="">
+                <p>Doom</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/YhwH.gif" alt="">
+                <p>Grand Theft Auto</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/MzK.gif" alt="">
+                <p>Max Payne</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/3wsQ.gif" alt="">
+                <p>Last Of Us</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://c.tenor.com/fiarhIxtD74AAAAd/postal-petition.gif" alt="">
+                <p>Postal 2</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/6ppd.gif" alt="">
+                <p>Marvel's Spiderman</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/XIN7.gif" alt="">
+                <p>Red Dead Redemption II</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/WQPj.gif" alt="">
+                <p>Assassin's Creed</p>
+
+            </div>
+
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/3mfH.gif" alt="">
+                <p>Portal 2</p>
+
+            </div>
+
+        </section>
 
     </div>
 </body>
