--- a/01-HTML-CSS/07-SCSS/tamir.work/index.html
+++ b/01-HTML-CSS/07-SCSS/tamir.work/index.html
@@ -10,34 +10,71 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="box title"></div>
-        <div class="box1">
-            <span class="box1__img"></span>
-            <p>שוקו</p>
+    <div class="wrapper wrapper1">
+        <div class="box title">
+            <p>old drinks</p>
         </div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-        <div class="box5"></div>
-        <div class="box6"></div>
-        <div class="box7"></div>
-        <div class="box8"></div>
-        <div class="box9"></div>
-        <div class="box10"></div>
+        <div class="box1">
+            <div class=box1__img>
+                <img src="drinks/שוקו.jpg" alt="">
+            </div>
+        </div>
+        <div class="box2">
+            <div class=box2--img>
+                <img src="drinks/קוקה קולה.jpg" alt="">
+            </div>
+        </div>
+        <div class="box3">
+            <div class=box3__img>
+                <img src="drinks/ויטמינציק.jpg" alt="">
+            </div>
+        </div>
+        <div class="box4">
+            <div class=box4__img>
+                <img src="drinks/שלוק.jpg" alt="">
+            </div>
+        </div>
+        <div class="box5">
+            <div class=box5__img>
+                <img src="drinks/OIP (5).jpg" alt="">
+            </div>
+        </div>
 
     </div>
-    <div class="wrapper2">
-        <div class="new">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-
+    <div class="wrapper wrapper2">
+        <div class="title2">
+            <div class="box title2">
+                <p>new drinks</p>
+            </div>
         </div>
+        <div class="box1">
+            <div class=box1__img>
+                <img src="drinks/הורדה (2).jpg" alt="">
+            </div>
+        </div>
+        <div class="box2">
+            <div class=box2--img>
+                <img src="drinks/הורדה (1).jpg" alt="">
+            </div>
+        </div>
+        <div class="box3">
+            <div class=box3__img>
+                <img src="drinks/OIP.jpg" alt="">
+            </div>
+        </div>
+        <div class="box4">
+            <div class=box4__img>
+                <img src="drinks/OIP (3).jpg" alt="">
+            </div>
+        </div>
+        <div class="box5">
+            <div class=box5__img>
+                <img src="drinks/OIP (2).jpg" alt="">
+            </div>
+        </div>
+
+
+
     </div>
 </body>
 
