--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -17,23 +17,23 @@
         <nav class="nav-bar">
             <ul class="nav-bar__list">
                 <li>
-                    <a herf="#"><i class="fas fa-dice-d6"></i>Home</a>
+                    <a herf="#top-container"><i class="fas fa-dice-d6"></i>Home</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-dice-d6"></i>Devices</a>
+                    <a href="#devices"><i class="fas fa-dice-d6"></i>Devices</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-dice-d6"></i>CS-GO</a>
+                    <a href="#cs-go"><i class="fas fa-dice-d6"></i>CS-GO</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-dice-d6"></i>Related</a>
+                    <a href="#related-games"><i class="fas fa-dice-d6"></i>Related</a>
                 </li>
             </ul>
         </nav>
 
         <!-- top container -->
 
-        <section class="top-container">
+        <section class="top-container" id="top-container">
             <header class="header">
                 <h1 class="header__h1">Republic of Gamers</h1>
                 <p class="header__p">Check Out The Classic Warld of Gaming With THE Best Games COllection OF All Time .
@@ -58,7 +58,7 @@
 
         <!-- Devices section -->
 
-        <section class="devices">
+        <section class="devices" id="devices">
             <div class="devices__box"
                 style="background-image: url(https://images.unsplash.com/photo-1560369457-fb1181a7ac4c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);">
                 <i class="fab fa-playstation fa-4x"></i>
@@ -95,7 +95,7 @@
             </div>
         </section>
 
-        <section class="cs-go">
+        <section class="cs-go" id="cs-go">
             <img class="cs-go__img" src="IMG/CS-GO.jpg" alt="cs">
             <div>
                 <h2 class="cs-go__h2">Counter Strike Global Offensive</h2>
@@ -109,7 +109,7 @@
 
         <!-- Related-Games -->
 
-        <section class="related-games">
+        <section class="related-games" id="related-games">
             <img class="related-games__img" src="IMG/cs-cz.jpg" alt="cs-cz">
             <img class="related-games__img" src="IMG/cs-s.jpg" alt="cs-s">
             <img class="related-games__img" src="IMG/farcry3.jpg" alt="farcry3">
