--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
@@ -6,9 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,300&display=swap" rel="stylesheet">    
     <link rel="shortcut icon" sizes="16x16" type="image/x-icon" href="https://www.addictinggames.com/sites/all/themes/starkish/images/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="dist/style.css">
-    <title>Addictive Games</title>
+    <title>Games - Free Online Games </title>
 
 </head>
 
@@ -41,19 +44,19 @@
             <div class="header__menu__box">
 
                 <img src="img/hot.png" alt="">
-                <p>hot</p>
+                <p>Hot</p>
 
             </div>
 
             <div class="header__menu__box">
 
                 <img src="img/multiplayer.png">
-                <p>multiplayer</p>
+                <p>Multiplayer</p>
 
             </div>
 
 
-            <div class="header__menu__box--u">
+            <div class="header__menu__box header__menu__box--u">
 
                 <img src="img/gamepass.png" alt="">
 
@@ -61,11 +64,11 @@
 
             <div class="header__menu__account">
 
-                <div class="register">
+                <div class="abutton">
                     Register
                 </div>
 
-                <div class="login">
+                <div class="abutton abutton--2">
                     Login
                 </div>
 
