--- a/01-HTML-CSS/07-SCSS/noa/hometask/game.html
+++ b/01-HTML-CSS/07-SCSS/noa/hometask/game.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>
-        
+        games
     </h1>
     <h2>
         classic games:
@@ -43,7 +43,7 @@
             </P>
         </div>
         <div class="box">
-            <iframe src="https://www.youtube.com/watch?v=kyYU1I5l0ac" frameborder="0"></iframe>
+            <iframe src="<iframe width="560" height="315" src="https://www.youtube.com/embed/kyYU1I5l0ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
             <P>
                 snake
             </P>
