--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Home.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Home.html
@@ -55,7 +55,7 @@
             </a>
             </li>
           <li>
-            <a id="twitter" href="https://twitter.com/joerogan" target="_blank">
+            <a  href="https://twitter.com/joerogan" target="_blank">
               <i class="fab fa-twitter twitter"></i>
             </a>
             
