--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
+    <link href="IMG/favicon.ico" rel="icon" type="icon" />
     <title>Gaming</title>
 </head>
 
@@ -14,6 +15,7 @@
     <div class="wrapper">
 
         <!-- Nav-bar -->
+
         <nav class="nav-bar">
             <ul class="nav-bar__list">
                 <li>
@@ -35,10 +37,10 @@
 
         <section class="top-container" id="top-container">
             <header class="header">
-                <h1 class="header__h1">Republic of Gamers</h1>
-                <p class="header__p">Check Out The Classic Warld of Gaming With THE Best Games COllection OF All Time .
+                <h1 class="header__h1">Republic of Games</h1>
+                <p class="header__p">Check Out The Warld of Gaming With THE Best Games COllection OF All Time .
                 </p>
-                <a href="#" class="btn">Read more</a>
+                <a href="#related-games" class="btn">Read more</a>
             </header>
 
             <div class="top-box"
