--- a/01-HTML-CSS/07-SCSS/Roi/index.html
+++ b/01-HTML-CSS/07-SCSS/Roi/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="SideWrapper">
-        <div class="SideWrapper__MainLogo"><img src="logos/Deezer-Logo.png"></div> 
-        <div Class="SideWrapperMenu">
-            <div class="SideWrapperMenu__item"><b>Music</b></div>
-            <div class="SideWrapperMenu__item"><b>Podcasts</b></div>
-            <div class="SideWrapperMenu__item"><b>Explore</b></div>
-            <div class="SideWrapperMenu__item"><b>Favourits</b></div>
-        </div>
+        <div class="SideWrapper__Menu">
+            <div class="SideWrapper__Menu__item"><img src="logos/deezer-logo.png"></div>
+            <div class="SideWrapper__Menu__item"><i class="fas fa-music"></i>&nbsp&nbsp<b>Music</b></div>
+            <div class="SideWrapper__Menu__item"><i class="fas fa-microphone-alt"></i>&nbsp&nbsp<b>Podcasts</b></div>
+            <div class="SideWrapper__Menu__item"><i class="fab fa-wpexplorer"></i>&nbsp&nbsp<b>Explore</b></div>
+            <div class="SideWrapper__Menu__item"><i class="far fa-heart"></i>&nbsp&nbsp<b>Favourits</b></div>
         </div>
     </div>
+    <div class="MainWrapper"></div>
 </body>
 </html>
