--- a/01-HTML-CSS/07-SCSS/noa/hometask/game.html
+++ b/01-HTML-CSS/07-SCSS/noa/hometask/game.html
@@ -11,79 +11,160 @@
 
 <body>
     <h1>
-        games
+        GAMES
     </h1>
     <h2>
-        classic games:
+        Classic games:
     </h2>
     <div class="classic-games">
         <div class="box">
-            <iframe src="https://www.youtube.com/watch?v=UzMfn2eR2NU"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UzMfn2eR2NU?controls=0&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <P>
-                solitaire
+                Solitaire
             </P>
         </div>
         <div class="box">
-            <iframe src="https://www.youtube.com/watch?v=V1JdpM7Prh8" frameborder="0"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/V1JdpM7Prh8?controls=0&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <P>
-                spider solitaire
+                Spider solitaire
             </P>
         </div>
         <div class="box">
-            <iframe src="https://www.youtube.com/watch?v=VyE_c43oW3I" frameborder="0"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VyE_c43oW3I?controls=0&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <P>
-                chess
+                Chess
             </P>
         </div>
         <div class="box">
-            <iframe width="auto" height="200" src="https://www.youtube.com/watch?v=aKML1EbVCvY" frameborder="0"></iframe>
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/_qE5Cv6wm4Y?controls=0&amp;start=4&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <P>
-                minesweeper
+                Minesweeper
 
             </P>
         </div>
         <div class="box">
-            <iframe src="<iframe width="560" height="315" src="https://www.youtube.com/embed/kyYU1I5l0ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kyYU1I5l0ac?controls=0&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <P>
-                snake
+                Snake
             </P>
         </div>
         <div class="box">
-
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/p5aLEyEFpwg?controls=0&amp;start=4&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Super mario
+            </P>
         </div>
         <div class="box">
-
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/WTAI7ejPERY?controls=0&amp;start=4&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Candy crash
+            </P>
         </div>
         <div class="box">
-
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/fRrKc7G15CE?controls=0&amp;start=4&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture "
+                allowfullscreen></iframe>
+            <P>
+                Temple run
+            </P>
         </div>
     </div>
     <h2>
-        puzzles:
+        Puzzles:
     </h2>
     <div class="puzzles">
         <div class="box">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/vCFhndKPv90?controls=0&amp;start=4&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Block puzzle
+            </P>
+        </div>
+        <div class="box">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/4m6OwU0i-ME?controls=0&amp;start=2&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Mahjong
+            </P>
+        </div>
+        <div class="box">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/BzNvU5dPbyo?controls=0&amp;start=42&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Sudoku
+            </P>
+        </div>
+        <div class="box">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/DYn04HDchIc?controls=0&amp;start=0&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Nonogram
+            </P>
+        </div>
+        <div class="box">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/7w-KZ5Pcc2E?controls=0&amp;start=7&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                2048
+            </P>
+        </div>
+        <div class="box">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/UjTpiOLxPWA?controls=0&amp;start=0&mute=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <P>
+                Crossword
+            </P>
+        </div>
+        <div class="box">
+
 
         </div>
         <div class="box">
 
-        </div>
-        <div class="box">
-
-        </div>
-        <div class="box">
-
-        </div>
-        <div class="box">
-
-        </div>
-        <div class="box">
-
-        </div>
-        <div class="box">
-
-        </div>
-        <div class="box">
 
         </div>
     </div>
