--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -34,8 +34,8 @@
             <button class="container__box--header__content__btn btn3">1 Month for free <i class="fas fa-gamepad"></i></button>
         </div>
         </div>
-        <div class="container__box">
-            <div class="container__box__content--game_1">
+        <div class="container__box game_1">
+            <div class="container__box__content ">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
             <div class="container__box__description">
@@ -48,7 +48,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_2">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -62,7 +62,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_3">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -76,7 +76,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_4">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -90,7 +90,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_5">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -104,7 +104,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_6">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -118,7 +118,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_7">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -132,7 +132,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_8">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -148,7 +148,7 @@
         </div>
     </div>
     <!--Sport games-->
-    <div class="container sport">
+    <div class="container sport game_9">
         <div class="container__box--header">
             <div class="container__box--header__content">
                 <h4>Sport Games</h4>
@@ -158,7 +158,7 @@
         </div>
         </div>
 
-        <div class="container__box">
+        <div class="container__box game_10">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -172,7 +172,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_11">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -186,7 +186,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_12">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -200,7 +200,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_13">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -214,7 +214,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_14">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -228,7 +228,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_15">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -242,7 +242,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_16">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -256,7 +256,7 @@
             </a>
         </div>
         </div>
-        <div class="container__box">
+        <div class="container__box game_17">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
