--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -29,9 +29,11 @@
         <div class="container__box--header">
             <div class="container__box--header__content">
             <h4>Action-Adventure Game</h4>
-            <button class="container__box--header__content__btn btn1">Order Now <i class="fas fa-money-check-alt"></i></button>
-            <button class="container__box--header__content__btn btn2">Add to cart <i class="fas fa-shopping-cart"></i></button>
-            <button class="container__box--header__content__btn btn3">1 Month for free <i class="fas fa-gamepad"></i></button>
+            <button class="container__box--header__content__btn btn">Order Now <i class="fas fa-money-check-alt"></i></button>
+            <button class="container__box--header__content__btn btn">Add to cart <i class="fas fa-shopping-cart"></i></button>
+            <button class="container__box--header__content__btn btn"> Sign-Up <i class="fas fa-gamepad"></i></button>
+            <button class="container__box--header__content__btn btn"> Login <i class="fas fa-sign-in-alt"></i></i></button>
+
         </div>
         </div>
         <div class="container__box game_1">
