--- a/01-HTML-CSS/07-SCSS/chaim/index.html
+++ b/01-HTML-CSS/07-SCSS/chaim/index.html
@@ -29,15 +29,92 @@
      <img src="6.jpg" alt="">
      <p>jgnvklcslk</p></div>
      <div class="card">
-      <img src="5.jpg" alt="">
+      <img src="7.jpg" alt=""> 
+      <p>dkfgnbklcckmz</p></div>
+   <div class="card">
+   <img src="8.jpg" alt="">
+   <p>dkfgnbklcckmz</p></div>
+   <div class="card">
+   <img src="9.jpg" alt="">
+    <p>dkfgnbklcckmz</p></div>
+    <div class="card">
+    <img src="10.jpg" alt="">
+    <p>dkfgnbklcckmz</p></div>
+    <div class="card">
+    <img src="11.jpg" alt="">
+    <p>dkfgnbklcckmz</p></div>  
+    <div class="card">
+      <img src="12.jpg" alt="">
+      <p>dkfgnbklcckmz</p></div>                                                                                            
+      <div class="card">
+      <img src="13.jpg" alt="">
       <p>dkfgnbklcckmz</p></div>
       <div class="card">
-        <img src="5.jpg" alt="">
-        <p>dkfgnbklcckmz</p></div>
-        <div class="card">
-          <img src="5.jpg" alt="">
+     <img src="14.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div> 
+     <div class="card">
+     <img src="15.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div>
+      <div class="card">
+     <img src="16.jpg" alt="">
+      <p>dkfgnbklcckmz</p></div>
+       <div class="card">
+      <img src="17.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div>
+      <div class="card">
+    <img src="18.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div>
+      <div class="card">
+    <img src="19.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div> 
+     <div class="card">
+    <img src="20.jpg" alt="">
+   <p>dkfgnbklcckmz</p></div>
+    <div class="card">
+    <img src="11.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div>
+      <div class="card">
+    <img src="12.jpg" alt="">
+    <p>dkfgnbklcckmz</p></div> 
+    <div class="card">
+    <img src="13.jpg" alt="">
+     <p>dkfgnbklcckmz</p></div>
+    <div class="card">
+      <img src="1.jpg" alt="">
+     <p>jvnvjvnclzkm</p></div>
+      <div class="card">
+      <img src="2.jpg" alt="">
+      <p>lfvjkjnl</p></div>
+       <div class="card">
+       <img src="3.jpg" alt="">
+       <p>kvcnklc</p></div>
+         <div class="card">
+        <img src="4.jpg" alt="">
+        <p>jfdnlksklj</p></div>
+       <div class="card">
+       <img src="5.jpg" alt="">
+       <p>dkfgnbklcckmz</p></div>
+         <div class="card">
+         <img src="6.jpg" alt="">
+         <p>jgnvklcslk</p></div>
+         <div class="card">
+          <img src="7.jpg" alt="">
           <p>dkfgnbklcckmz</p></div>
-                                                                                                
+       <div class="card">
+       <img src="8.jpg" alt="">
+       <p>dkfgnbklcckmz</p></div>
+       <div class="card">
+       <img src="9.jpg" alt="">
+        <p>dkfgnbklcckmz</p></div>
+        </div>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
