What I finally got

--- a/01-HTML-CSS/07-SCSS/Etan/index.html
+++ b/01-HTML-CSS/07-SCSS/Etan/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,70 +8,97 @@
     <link rel="stylesheet" href="dist/style.css">
     <title>Check</title>
 </head>
+
 <body>
-    <div class="wrapper"> 
+    <div class="wrapper">
         <h1>Nostalgic games</h1>
-        <script src="script.js"></script>
-        <div class="card">
-            <video src=01-HTML-CSS/07-SCSS/Etan/videos/kuala_lumpur_timelapse.mp4 loop></video>
+        <div class="wrapper__card">
+            <video loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+        </div>
+        <div class="wrapper__card">
+            <video width="100vw" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
+        <div class="wrapper__card">
+            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
+                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
+            </source>
+            </video>
+            <h1>Asorted drugs</h1>
+            <p>78.90</p>
+        </div>
     </div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-        <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBrX1VGeJqGsBu8m6Q_dQO9MBs2XcHRcttgQ&usqp=CAU" alt="Asorted">
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
-        </div>
-    </div>
+    <footer>
+        
+    </footer>
+
 </body>
-<footer>
-    <script>
-    const videos = document.querySelectorAll("video")
 
-videos.forEach(video => {
-    video.addEvenetListener("mouseover", function (){
-         this.play()
-    })
-
-video.addEvenetListener("mouseout", function() {
-    this.pause()
-})
-})
-</script>
-</footer>
 </html>
